--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PLAY', 'FILLING', 'BAR', 'THEATRE', 'EASYGOING', 'DATE', 'LEAD', 'THAT', 'STORY', 'ISLAND']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "upper_words = [word.upper() for word in words]\n",
+    "print(upper_words)"
    ]
   },
   {
@@ -41,11 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['filling', 'theatre', 'easygoing', 'story', 'island']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "new_list = [word for word in words if len(word) >= 5]\n",
+    "print(new_list)"
    ]
   },
   {
@@ -57,11 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "t_words = [word for word in words if word[0] == 't']\n",
+    "if len(t_words) > 0:\n",
+    "    print(t_words[0])\n",
+    "else:\n",
+    "    print('The list not have any word starting with \"t\"')"
    ]
   },
   {
@@ -80,11 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "square_list = [number**2 for number in range(1,11)]\n",
+    "\n",
+    "print(square_list)"
    ]
   },
   {
@@ -96,11 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "square_odd_list = [number**2 for number in range(1,11) if number % 2 == 1]\n",
+    "\n",
+    "print(square_odd_list)"
    ]
   },
   {
@@ -112,11 +162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 256, 576, 1024, 1600, 2304, 3136, 4096, 5184, 6400, 7744, 9216, 10816, 12544, 14400, 16384, 18496, 20736, 23104, 25600, 28224, 30976, 33856, 36864, 40000, 43264, 46656, 50176, 53824, 57600, 61504, 65536, 69696, 73984, 78400, 82944, 87616, 92416, 97344, 102400, 107584, 112896, 118336, 123904, 129600, 135424, 141376, 147456, 153664, 160000, 166464, 173056, 179776, 186624, 193600, 200704, 207936, 215296, 222784, 230400, 238144, 246016, 254016, 262144, 270400, 278784, 287296, 295936, 304704, 313600, 322624, 331776, 341056, 350464, 360000, 369664, 379456, 389376, 399424, 409600, 419904, 430336, 440896, 451584, 462400, 473344, 484416, 495616, 506944, 518400, 529984, 541696, 553536, 565504, 577600, 589824, 602176, 614656, 627264, 640000, 652864, 665856, 678976, 692224, 705600, 719104, 732736, 746496, 760384, 774400, 788544, 802816, 817216, 831744, 846400, 861184, 876096, 891136, 906304, 921600, 937024, 952576, 968256, 984064, 1000000]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "square_list = [number**2 for number in range(1,1001) if number % 8 == 0]\n",
+    "\n",
+    "print(square_list)"
    ]
   },
   {
@@ -128,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(len(people))"
    ]
   },
   {
@@ -186,11 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "people_with_kids_list = [person for person in people if person['n_kids'] > 0] # first generate the list in memory\n",
+    "print(len(people_with_kids_list)) # get the len of list\n",
+    "\n",
+    "people_with_kids = sum(1 for person in people if person['n_kids'] > 0) # first generate the list in memory, then sum the list\n",
+    "print(people_with_kids)"
    ]
   },
   {
@@ -202,11 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "total_of_kids = sum(person['n_kids'] for person in people ) # first generate the list in memory, then sum the list\n",
+    "print(total_of_kids)"
    ]
   },
   {
@@ -218,11 +308,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'n_kids': 2}, {'name': 'Lucía', 'n_kids': 3}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "people_in_a_year = [\n",
+    "    {\"name\": person[\"name\"], \"n_kids\": person[\"n_kids\"] + 1} if person[\"name\"].endswith(\"a\") else person for person in people # create the dictionay inside the list\n",
+    "]\n",
+    "\n",
+    "print(people_in_a_year)"
    ]
   }
  ],
@@ -242,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   },
   "toc": {
    "base_numbering": 1,
