--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "print(len(people))"
+    "print(len(people)) # get the len of the list to get how many people are there"
    ]
   },
   {
